Added console notification

--- a/clusters/overlays/parasol-insurance-dev/kustomization.yaml
+++ b/clusters/overlays/parasol-insurance-dev/kustomization.yaml
@@ -13,6 +13,10 @@ patches:
     target:
       group: argoproj.io
       kind: Application
+  - path: patch-console-notification.yaml
+    target:
+      group: console.openshift.io
+      kind: ConsoleNotification
 
 replacements:
   - source:
