--- a/clusters/base/kustomization.yaml
+++ b/clusters/base/kustomization.yaml
@@ -4,4 +4,5 @@ kind: Kustomization
 namespace: openshift-gitops
 
 resources:
+  - console-notification.yaml
   - ../../components/argocd/projects/overlays/default
